--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,14 +60,14 @@ services:
     container_name: alpha_frontend
     restart: always
     ports:
-      # CORRECTED: Maps host port 3000 to the container's exposed port 3000
+      # Maps host port 3000 to the container's exposed port 3000
       - "3000:3000"
     environment:
-      # ADDED: Passes the backend URL to the Vite build environment
+      # Passes the backend URL to the Vite build environment inside the container
       - VITE_API_URL=http://localhost:4000
     depends_on:
       - backend
 
-# Named volume to persist database data
+# Named volume to persist database data across container restarts
 volumes:
   postgres_data:
