--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Environment variables
 .env
@@ -19,6 +20,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.example
 
 # IDE and OS files
 .idea/
@@ -30,5 +32,6 @@ yarn-error.log*
 *.sw?
 .DS_Store
 
-# Test reports
+# Test reports and cache
 coverage/
+.jest-cache
